feat: new filters, docs update
